@@ -61,7 +61,7 @@ sub childNodes
     } elsif ($parentType eq 'computer') {
         # dont look for childs in computers
         return [];
-    } elsif (($parentMetadata->{dn} =~ /^ou=Computers,/i) and EBox::Global->modExists('samba')) {
+    } elsif ($parentMetadata->{dn} =~ /^ou=Computers,/i) {
         # FIXME: Integrate this better with the rest of the logic.
         return $self->_sambaComputers();
     } else {
@@ -126,10 +126,12 @@ sub _sambaComputers
 {
     my ($self) = @_;
 
+    return [] unless EBox::Global->modExists('samba');
+
     my $samba = EBox::Global->modInstance('samba');
+    return [] unless $samba->isEnabled();
 
     my @computers;
-
     foreach my $computer (@{$samba->computers()}) {
         my $dn = $computer->dn();
         my $printableName = $computer->name();
