@@ -1,4 +1,6 @@
 HEAD
+	+ Fix 'Cannot connect to samba LDAP' error in manage model when samba
+	  is installed but disabled
 	+ Add missing use to EBox::Users::LDAP::ExternalAD
 	+ Force DNS restart when users mode changed
 	+ Force service principals update on _postServiceHook in external AD mode
